--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
     "node": ">=8.9.0"
   },
   "dependencies": {
-    "got": "^9.2.2"
+    "@meltwater/mlabs-logger": "^5.1.1",
+    "got": "^9.2.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
