--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   "dependencies": {
     "@meltwater/mlabs-logger": "^5.1.1",
     "got": "sindresorhus/got",
+    "prom-client": "^11.1.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
