--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meltwater/mlabs-http",
-  "version": "0.6.1",
+  "version": "0.7.0-beta.0",
   "description": "HTTP client wrapper around Got.",
   "main": "dist/index.js",
   "module": "index.js",
