--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   },
   "dependencies": {
     "@meltwater/mlabs-logger": "^5.1.1",
+    "awilix": "^4.0.0",
     "got": "sindresorhus/got",
     "prom-client": "^11.1.3",
     "uuid": "^3.3.2"
