--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
   "dependencies": {
     "@meltwater/mlabs-logger": "^5.1.1",
     "awilix": "^4.0.0",
-    "got": "sindresorhus/got",
+    "got": "^9.2.2",
     "prom-client": "^11.1.3",
     "uuid": "^3.3.2"
   },
