--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meltwater/mlabs-http",
-  "version": "1.6.0",
+  "version": "2.0.0-alpha.0",
   "description": "HTTP client wrapper around Got.",
   "main": "dist/index.js",
   "module": "index.js",
