--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meltwater/mlabs-http",
-  "version": "2.0.1",
+  "version": "3.0.0-rc.0",
   "description": "HTTP client wrapper around Got.",
   "type": "module",
   "main": "dist/index.cjs",
