--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "3.2.0",
   "description": "HTTP client wrapper around Got.",
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "index.js",
   "exports": {
-    "import": "./index.js",
-    "require": "./dist/index.cjs"
+    "import": "./index.js"
   },
   "module": "index.js",
   "sideEffects": false,
@@ -27,7 +26,6 @@
     "index.js",
     "lib",
     "data",
-    "dist",
     "docs"
   ],
   "scripts": {
@@ -39,14 +37,7 @@
     "test:inspect": "node --inspect node_modules/ava/profile",
     "test:inspect:watch": "nodemon --inspect node_modules/ava/profile",
     "lint": "gulp lint",
-    "clean": "del dist",
-    "build": "npm-run-all --parallel build:*",
-    "prebuild": "npm-run-all clean",
-    "build:index": "babel --source-maps --out-file-extension .cjs --out-dir dist index.js",
-    "build:lib": "babel --source-maps --ignore='**/*.spec.js' --out-file-extension .cjs --out-dir dist/lib lib",
-    "dist": "npm-run-all build",
-    "predist": "npm-run-all test",
-    "preversion": "npm-run-all dist",
+    "preversion": "npm-run-all test",
     "postversion": "git push && git push --tags",
     "example": "node examples",
     "example:watch": "nodemon examples",
@@ -57,27 +48,6 @@
     "format": "npm-run-all --serial pretty format:*",
     "format:js": "standard --fix",
     "report": "nyc report"
-  },
-  "babel": {
-    "plugins": [
-      [
-        "babel-plugin-add-import-extension",
-        {
-          "extension": "cjs",
-          "replace": true
-        }
-      ]
-    ],
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
-    ]
   },
   "ava": {
     "files": [
@@ -130,13 +100,8 @@
     "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
     "@meltwater/examplr": "^7.0.0",
     "ava": "^3.3.0",
-    "babel-plugin-add-import-extension": "^1.4.3",
     "del-cli": "^3.0.0",
     "eslint": "^7.12.1",
     "gulp": "^4.0.0",
