--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "docs"
   ],
   "scripts": {
-    "test": "nyc ava",
+    "test": "c8 ava",
     "pretest": "npm-run-all lint",
     "posttest": "node index.js",
     "test:update": "ava --update-snapshots",
@@ -47,7 +47,7 @@
     "pretty": "prettier --ignore-path .gitignore --write '**/*.(js|json|graphql)'",
     "format": "npm-run-all --serial pretty format:*",
     "format:js": "standard --fix",
-    "report": "nyc report"
+    "report": "c8 report"
   },
   "ava": {
     "files": [
@@ -55,7 +55,7 @@
       "!package/**/*"
     ]
   },
-  "nyc": {
+  "c8": {
     "exclude": [
       "**/index.js",
       "package/**/*.js",
@@ -99,7 +99,8 @@
   },
   "devDependencies": {
     "@meltwater/examplr": "^7.0.0",
-    "ava": "^3.3.0",
+    "ava": "^4.0.1",
+    "c8": "^7.11.0",
     "del-cli": "^4.0.1",
     "eslint": "^7.12.1",
     "gulp": "^4.0.0",
@@ -111,7 +112,6 @@
     "nock": "^13.0.2",
     "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.2",
-    "nyc": "^15.0.0",
     "prettier": "^2.0.1",
     "standard": "^16.0.2"
   }
