--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meltwater/mlabs-http",
-  "version": "3.2.0",
+  "version": "4.0.0-rc.0",
   "description": "HTTP client wrapper around Got.",
   "type": "module",
   "main": "index.js",
